--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://4f91be85-af57-4c20-9816-7cf4d1b33d69.preview.emergentagent.com
 WDS_SOCKET_PORT=443
